update: fixed tag component overflow issue on landing page

--- a/front-end/src/components/user/Home/Home.css
+++ b/front-end/src/components/user/Home/Home.css
@@ -148,8 +148,9 @@
   color: white;
   text-transform: uppercase;
   width: 6rem;
-  height: 100%;
+  /* height: 100%; */
   min-height: 2.5rem;
   text-align: center;
-  transform: translateY(3.5rem) translateX(1rem);
+  transform: translateY(1.1rem) translateX(1rem);
+  position: absolute;
 }
